build_final.log
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/SHASHIN/.gradle/wrapper/dists/gradle-8.14-bin/38aieal9i53h9rfe7vjup95b9/gradle-8.14/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

> Task :clean

> Task :compileJava FAILED
C:\Users\SHASHIN\IdeaProjects\qtdom\src\main\java\com\shashin\bookmap\dom\BookmapJigsawDom.java:14: error: cannot find symbol
import velox.api.layer1.settings.Layer1ApiSettingsPanelProvider; // Correct Core API interface
                                ^
  symbol:   class Layer1ApiSettingsPanelProvider
  location: package velox.api.layer1.settings
C:\Users\SHASHIN\IdeaProjects\qtdom\src\main\java\com\shashin\bookmap\dom\BookmapJigsawDom.java:31: error: cannot find symbol
        Layer1ApiSettingsPanelProvider { // Implementation fixed
        ^
  symbol: class Layer1ApiSettingsPanelProvider
C:\Users\SHASHIN\IdeaProjects\qtdom\src\main\java\com\shashin\bookmap\dom\BookmapJigsawDom.java:146: error: method does not override or implement a method from a supertype
    @Override
    ^
3 errors

[Incubating] Problems report is available at: file:///C:/Users/SHASHIN/IdeaProjects/qtdom/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\SHASHIN\IdeaProjects\qtdom\src\main\java\com\shashin\bookmap\dom\BookmapJigsawDom.java:14: error: cannot find symbol
  import velox.api.layer1.settings.Layer1ApiSettingsPanelProvider; // Correct Core API interface
                                  ^
    symbol:   class Layer1ApiSettingsPanelProvider
    location: package velox.api.layer1.settings
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
2 actionable tasks: 2 executed
